Archive2/79/21a28fcf1c5895/output
main.cpp:9:1: error: stray '\303' in program
 if(A nota está entre 86 a 100?){
 ^
main.cpp:9:1: error: stray '\241' in program
main.cpp:10:5: error: stray '\303' in program
     Se sim é conceito A, então a saida deve ser A
     ^
main.cpp:10:5: error: stray '\251' in program
main.cpp:10:5: error: stray '\303' in program
main.cpp:10:5: error: stray '\243' in program
main.cpp:11:1: error: stray '\303' in program
 }else if(A nota está entre 61 a 85?){
 ^
main.cpp:11:1: error: stray '\241' in program
main.cpp:12:5: error: stray '\303' in program
     Se sim é conceito B, então a saida deve ser B
     ^
main.cpp:12:5: error: stray '\251' in program
main.cpp:12:5: error: stray '\303' in program
main.cpp:12:5: error: stray '\243' in program
main.cpp:13:1: error: stray '\303' in program
 }else if(A nota está entre 36 a 60?){
 ^
main.cpp:13:1: error: stray '\241' in program
main.cpp:14:5: error: stray '\303' in program
     Se sim é conceito C, então a saida deve ser C
     ^
main.cpp:14:5: error: stray '\251' in program
main.cpp:14:5: error: stray '\303' in program
main.cpp:14:5: error: stray '\243' in program
main.cpp:15:1: error: stray '\303' in program
 }else if(A nota está entre 1 a 35?){
 ^
main.cpp:15:1: error: stray '\241' in program
main.cpp:16:5: error: stray '\303' in program
     Se sim é conceito D, então a saida deve ser D
     ^
main.cpp:16:5: error: stray '\251' in program
main.cpp:16:5: error: stray '\303' in program
main.cpp:16:5: error: stray '\243' in program
main.cpp:17:1: error: stray '\303' in program
 }else if(A nota é 0?){
 ^
main.cpp:17:1: error: stray '\251' in program
main.cpp:18:5: error: stray '\303' in program
     Se sim é conceito E, então a saida deve ser E
     ^
main.cpp:18:5: error: stray '\251' in program
main.cpp:18:5: error: stray '\303' in program
main.cpp:18:5: error: stray '\243' in program
main.cpp: In function 'int main()':
main.cpp:9:4: error: 'A' was not declared in this scope
 if(A nota está entre 86 a 100?){
    ^
main.cpp:9:6: error: expected ')' before 'nota'
 if(A nota está entre 86 a 100?){
      ^
main.cpp:10:5: error: 'Se' was not declared in this scope
     Se sim é conceito A, então a saida deve ser A
     ^
main.cpp:11:12: error: expected ')' before 'nota'
 }else if(A nota está entre 61 a 85?){
            ^
main.cpp:12:5: error: 'Se' was not declared in this scope
     Se sim é conceito B, então a saida deve ser B
     ^
main.cpp:13:12: error: expected ')' before 'nota'
 }else if(A nota está entre 36 a 60?){
            ^
main.cpp:14:5: error: 'Se' was not declared in this scope
     Se sim é conceito C, então a saida deve ser C
     ^
main.cpp:15:12: error: expected ')' before 'nota'
 }else if(A nota está entre 1 a 35?){
            ^
main.cpp:16:5: error: 'Se' was not declared in this scope
     Se sim é conceito D, então a saida deve ser D
     ^
main.cpp:17:12: error: expected ')' before 'nota'
 }else if(A nota é 0?){
            ^
main.cpp:18:5: error: 'Se' was not declared in this scope
     Se sim é conceito E, então a saida deve ser E
     ^
