Archive2/79/21a28fcf1c5895/main.cpp
//Notas da prova(Tarefa da OBI2009, Modalidade Programação Júnior, Fase 1)
#include <iostream>
using namespace std;

int main(){
int nota;
cin >> nota;

if(A nota está entre 86 a 100?){
    Se sim é conceito A, então a saida deve ser A
}else if(A nota está entre 61 a 85?){
    Se sim é conceito B, então a saida deve ser B
}else if(A nota está entre 36 a 60?){
    Se sim é conceito C, então a saida deve ser C
}else if(A nota está entre 1 a 35?){
    Se sim é conceito D, então a saida deve ser D
}else if(A nota é 0?){
    Se sim é conceito E, então a saida deve ser E
}

return 0;
}